# netgame

./: .gitignore  .gitmodules  CMakeLists.txt
server/: events.py  game.py  packets.py  server.py
src/: actor.h  color.h  eventqueue.cpp  eventqueue.h  game.cpp  game.h  input.cpp  input.h  main.cpp  networker.cpp  networker.h  rectangle.h  renderer.cpp  renderer.h  state.cpp  state.h  texture.cpp  texture.h  vec2.h
src/finish/: finish.cpp  finish.h
src/game/: card.cpp  card.h  combineparts.cpp  combineparts.h  gamer.cpp  gamer.h  networker.cpp  networker.h
src/lobby/: button.cpp  button.h  lobby.cpp  lobby.h  nameentry.cpp  nameentry.h
src/simplesock/: CMakeLists.txt
